WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100356
Conditionalize XHR timeout support
https://bugs.webkit.org/show_bug.cgi?id=100356
Summary
Conditionalize XHR timeout support
Dominik Röttsches (drott)
Reported
2012-10-25 01:57:25 PDT
abarth has asked to conditionalize xhr timeout support for ports that don't support it so that feature detection on web sites works.
Attachments
Patch
(40.29 KB, patch)
2012-10-25 06:45 PDT
,
Dominik Röttsches (drott)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kenneth Rohde Christiansen
Comment 1
2012-10-25 06:04:58 PDT
Link to spec?
Dominik Röttsches (drott)
Comment 2
2012-10-25 06:18:28 PDT
http://www.w3.org/TR/XMLHttpRequest/#the-timeout-attribute
Implementation was discussed already and landed in
bug 74802
.
Dominik Röttsches (drott)
Comment 3
2012-10-25 06:45:10 PDT
Created
attachment 170630
[details]
Patch
Adam Barth
Comment 4
2012-10-25 10:45:59 PDT
Comment on
attachment 170630
[details]
Patch Thanks!
WebKit Review Bot
Comment 5
2012-10-25 12:27:01 PDT
Comment on
attachment 170630
[details]
Patch Clearing flags on attachment: 170630 Committed
r132513
: <
http://trac.webkit.org/changeset/132513
>
WebKit Review Bot
Comment 6
2012-10-25 12:27:06 PDT
All reviewed patches have been landed. Closing bug.
Kent Tamura
Comment 7
2012-10-25 19:17:54 PDT
Would you update
http://trac.webkit.org/wiki/FeatureFlags
please?
Dominik Röttsches (drott)
Comment 8
2012-10-26 04:02:33 PDT
(In reply to
comment #7
)
> Would you update
http://trac.webkit.org/wiki/FeatureFlags
please?
Done,
https://trac.webkit.org/wiki/FeatureFlags#XHR_TIMEOUT
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug