.: Adding feature for XHR_TIMEOUT

Conditionalize XHR timeout support
https://bugs.webkit.org/show_bug.cgi?id=100356

Reviewed by Adam Barth.

Adding feature for XHR_TIMEOUT to disable it on ports that don't have
network backend support for setTimeoutInterval.

* Source/cmake/OptionsEfl.cmake: Default ON on EFL.
* Source/cmake/WebKitFeatures.cmake: Default OFF for any CMAKE based port.
* Source/cmakeconfig.h.cmake: Adding define.
* configure.ac: Make autogen.sh support the --enable/--disable-xhr-timeout parameter.

Source/JavaScriptCore: Conditionalize XHR timeout support
https://bugs.webkit.org/show_bug.cgi?id=100356

Reviewed by Adam Barth.

Adding XHR_TIMEOUT feature to conditionalize this on ports without network backend support.

* Configurations/FeatureDefines.xcconfig:

Source/WebCore: Conditionalize XHR timeout support
https://bugs.webkit.org/show_bug.cgi?id=100356

Reviewed by Adam Barth.

Adding feature for XHR_TIMEOUT to disable it on ports that don't have
network backend support for setTimeoutInterval.

No new tests, covered by http/tests/xmlhttprequest/timeout/*

* Configurations/FeatureDefines.xcconfig: Default ON on mac.
* GNUmakefile.am:
* GNUmakefile.features.am:
  Autotools support for the flag.
* xml/XMLHttpRequest.cpp: #if ENABLE(XHR_TIMEOUT) wrapping
(WebCore::XMLHttpRequest::XMLHttpRequest):
(WebCore):
(WebCore::XMLHttpRequest::open):
(WebCore::XMLHttpRequest::createRequest):
(WebCore::XMLHttpRequest::didFail):
* xml/XMLHttpRequest.h: #if ENABLE(XHR_TIMEOUT) wrapping
(XMLHttpRequest):
* xml/XMLHttpRequest.idl: Conditional properties timeout and ontimeout (event handler).

Source/WebKit/chromium: Conditionalize XHR timeout support
https://bugs.webkit.org/show_bug.cgi?id=100356

Reviewed by Adam Barth.

Adding XHR_TIMEOUT feature to conditionalize this on ports without network backend support.
Defaults to off on chromium until webkit.org/b/98397 is solved.

* features.gypi:

Source/WebKit/mac: Conditionalize XHR timeout support
https://bugs.webkit.org/show_bug.cgi?id=100356

Reviewed by Adam Barth.

Adding XHR_TIMEOUT feature to conditionalize this on ports without network backend support.
Defaults to ON on Mac since the Mac NSUrlConnection based backend has setTimeoutInterval support.

* Configurations/FeatureDefines.xcconfig:

Source/WebKit2: Conditionalize XHR timeout support
https://bugs.webkit.org/show_bug.cgi?id=100356

Reviewed by Adam Barth.

Adding XHR_TIMEOUT feature to conditionalize this on ports without network backend support.
Defaults to ON on Mac since the Mac NSUrlConnection based backend has setTimeoutInterval support.

* Configurations/FeatureDefines.xcconfig:

Tools: Conditionalize XHR timeout support
https://bugs.webkit.org/show_bug.cgi?id=100356

Reviewed by Adam Barth.

Adding XHR_TIMEOUT feature in perl and qmake files.

* Scripts/webkitperl/FeatureList.pm:
* qmake/mkspecs/features/features.pri:

WebKitLibraries: Conditionalize XHR timeout support
https://bugs.webkit.org/show_bug.cgi?id=100356

Reviewed by Adam Barth.

Adding ENABLE_XHR_TIMEOUT feature, which is default off for Apple Win.
See also https://bugs.webkit.org/show_bug.cgi?id=100349 for an attempt
to fix timeout support for CF Network.

* win/tools/vsprops/FeatureDefines.vsprops:
* win/tools/vsprops/FeatureDefinesCairo.vsprops:


Canonical link: https://commits.webkit.org/118427@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132513 268f45cc-cd09-0410-ab3c-d52691b4dbfc