Source/WebCore/xml/XMLHttpRequest.h
@@ -70,7 +70,9 @@ public:
     };
 
     virtual void contextDestroyed();
+#if ENABLE(XHR_TIMEOUT)
     virtual void didTimeout();
+#endif
     virtual bool canSuspend() const;
     virtual void suspend(ReasonForSuspension);
     virtual void resume();
@@ -106,8 +108,10 @@ public:
     Document* optionalResponseXML() const { return m_responseDocument.get(); }
     Blob* responseBlob(ExceptionCode&);
     Blob* optionalResponseBlob() const { return m_responseBlob.get(); }
+#if ENABLE(XHR_TIMEOUT)
     unsigned long timeout() const { return m_timeoutMilliseconds; }
     void setTimeout(unsigned long timeout, ExceptionCode&);
+#endif
 
     void sendFromInspector(PassRefPtr<FormData>, ExceptionCode&);
 
@@ -137,7 +141,9 @@ public:
     DEFINE_ATTRIBUTE_EVENT_LISTENER(loadend);
     DEFINE_ATTRIBUTE_EVENT_LISTENER(loadstart);
     DEFINE_ATTRIBUTE_EVENT_LISTENER(progress);
+#if ENABLE(XHR_TIMEOUT)
     DEFINE_ATTRIBUTE_EVENT_LISTENER(timeout);
+#endif
 
     using RefCounted<XMLHttpRequest>::ref;
     using RefCounted<XMLHttpRequest>::deref;
@@ -196,7 +202,9 @@ private:
     String m_mimeTypeOverride;
     bool m_async;
     bool m_includeCredentials;
+#if ENABLE(XHR_TIMEOUT)
     unsigned long m_timeoutMilliseconds;
+#endif
     RefPtr<Blob> m_responseBlob;
 
     RefPtr<ThreadableLoader> m_loader;
